After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694968 - GtkIconTheme: fix failed assertion when asynchrnously loading emblemed icons
GtkIconTheme: fix failed assertion when asynchrnously loading emblemed icons
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: [obsolete] stock-icons
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 695059 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-03-01 22:51 UTC by Giovanni Campagna
Modified: 2013-03-04 15:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkIconTheme: fix failed assertion when asynchrnously loading emblemed icons (2.12 KB, patch)
2013-03-01 22:51 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-03-01 22:51:20 UTC
If you tried to lookup an icon that was not emblemed, and then looked up
an emblemed icon with the same base, we would override the iconinfo adding
the emblems inline. Later, when the icon finished rendering, inside
gtk_icon_info_load_icon_finish, we would copy the result from the duplicate
(which did not include the emblem infos), but the icon would still fail the
assertion, because emblems infos are present but emblem_applied is false
(they were not requested in the first place!).
Solve this by avoiding the overwrite on a cached iconinfo, and instead duplicate
the iconinfo before adding the emblems. It is expected that another layer
of caching (such as StTextureCache in gnome-shell) will take care of avoiding
multiple rendering of the same icon+emblem combination.
Comment 1 Giovanni Campagna 2013-03-01 22:51:23 UTC
Created attachment 237762 [details] [review]
GtkIconTheme: fix failed assertion when asynchrnously loading emblemed icons
Comment 2 Cosimo Cecchi 2013-03-03 20:24:32 UTC
*** Bug 695059 has been marked as a duplicate of this bug. ***
Comment 3 Alexander Larsson 2013-03-04 13:36:18 UTC
Review of attachment 237762 [details] [review]:

Looks good to me
Comment 4 Giovanni Campagna 2013-03-04 15:30:09 UTC
Attachment 237762 [details] pushed as 0db32f0 - GtkIconTheme: fix failed assertion when asynchrnously loading emblemed icons